--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -1,6 +1,6 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 .search-bar {
   display: flex;
@@ -11,4 +11,11 @@
 
 .search-bar input {
   margin-right: 10px;
+}
+
+.MPAHeader {
+  display: flex;
+  justify-content: center;
+  font-weight: 400;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
