--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -12,3 +12,11 @@
 .search-bar input {
   margin-right: 10px;
 }
+
+.home-logo {
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
