--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -44,10 +44,5 @@
   justify-content: center;
   font-weight: 400;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.searchBar{
-  & input {
-    width: 200px;
-  }
+  font-size: 400px;
 }
