--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -43,3 +43,8 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
 }
+
+.profileCardLayout {
+  display: flex;
+  gap: 50px;
+}
