--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -46,6 +46,7 @@
 
 .profileCardLayout {
   display: flex;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   /* gap: 50px; */
 }
 
@@ -53,9 +54,29 @@
   display: flex;
   flex-direction: column;
   width: 200px;
+  padding: 45px 100px 45px 45px;
 }
 
 .ratingHeader {
   align-self: center;
   padding-bottom: 4px;
+
+}
+
+.ratingText{
+  font-size: 20px;
+  font-weight: 200;
+  margin-left: 13px;
+
+}
+
+.ratingNumberText {
+  font-size: 40px;
+  font-weight: 400;
+  margin: 0px 20px 0px 15px;
+}
+
+.ratingFooter {
+  font-weight: 300;
+  font-size: 17px;
 }
