--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -46,7 +46,11 @@
 
 .profileCardLayout {
   display: flex;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border: 1px solid #333;
+  border-radius: 10px;
+  max-width: 1000px;
+  background-color: rgb(233, 232, 232);
   /* gap: 50px; */
 }
 
