--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -44,14 +44,17 @@
   font-size: 20px;
 }
 
+
 .profileCardLayout {
   display: flex;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  border: 1px solid #333;
+  align-self: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   border-radius: 10px;
-  max-width: 1000px;
+  
+  /* max-width: 1000px; */
   background-color: rgb(233, 232, 232);
   /* gap: 50px; */
+  padding-bottom: 10px;
 }
 
 .ratingLayout {
@@ -79,23 +82,44 @@
   font-weight: 800;
   /* margin: 0px 20px 0px 15px; */
   background-color: rgb(76, 224, 76);
-  padding: 30px;
+  padding: 25px;
 }
 
 .ratingFooter {
-  padding-top: 10px;
-  
+  padding-top: 21px;
+  :global {
+    &.ant-btn{
+      font-size: 16px !important;
+      height: 32px;
+      padding: 2px 11px !important;
+      border-radius: 6px;
+    }
+
+  }
 }
 
 .profileBody {
-  margin-top: 18px;
+  margin-top: 6px;
   & h1 {
     font-size: 45px;
   }
   font-size: 16px;
   font-weight: 500;
+  padding-right: 20px;
+  max-width: 750px;
 }
 
 .reviewNumText {
   margin-left: 20px;
+}
+
+.profilePageLayout {
+  padding: 20px 250px;
+}
+
+.userRatingLayout {
+  display: flex;
+  flex-direction: column;
+  width: 180px;
+  padding: 30px 100px 45px 20px;
 }
