--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -55,6 +55,7 @@
   background-color: rgb(233, 232, 232);
   /* gap: 50px; */
   padding-bottom: 10px;
+  margin-bottom: 2rem;
 }
 
 .ratingLayout {
@@ -106,7 +107,6 @@
   font-size: 16px;
   font-weight: 500;
   padding-right: 20px;
-  max-width: 750px;
 }
 
 .reviewNumText {
@@ -122,4 +122,42 @@
   flex-direction: column;
   width: 180px;
   padding: 30px 100px 45px 20px;
+}
+
+.userRatingNumberText{
+  font-size: 35px;
+  font-weight: 800;
+  background-color: rgb(76, 224, 76);
+  padding: 20px;
+  margin-left: 5px;
+}
+
+.userRatingText{
+  font-size: 18px;
+  font-weight: 200;
+  margin-left: 26px;
+
+}
+
+.goodRating {
+  background-color: rgb(76, 224, 76);
+}
+
+.okRating {
+  background-color: rgb(245, 173, 6);
+}
+
+.badRating {
+  background-color: rgb(224, 70, 70);
+}
+
+.userProfileBody {
+  margin-top: 6px;
+  & h1 {
+    font-size: 30px;
+  }
+  font-size: 16px;
+  font-weight: 400;
+  /* padding-right: 20px; */
+  /* max-width: 750px; */
 }
