--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -89,7 +89,7 @@
 .ratingFooter {
   padding-top: 21px;
   :global {
-    &.ant-btn{
+    &.ant-btn {
       font-size: 16px !important;
       height: 32px;
       padding: 2px 11px !important;
@@ -120,7 +120,6 @@
 .userRatingLayout {
   display: flex;
   flex-direction: column;
-  width: 180px;
   padding: 30px 100px 45px 20px;
 }
 
@@ -136,7 +135,6 @@
   font-size: 18px;
   font-weight: 200;
   margin-left: 26px;
-
 }
 
 .goodRating {
@@ -160,4 +158,15 @@
   font-weight: 400;
   /* padding-right: 20px; */
   /* max-width: 750px; */
+}
+
+.numOfUserReviews {
+  margin-bottom: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  max-width: 119px;
+  padding: 5px;
+  align-self: left;
+  background-color: rgb(223, 222, 222);
+  border-radius: 5px;
 }
