--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -156,7 +156,7 @@
   }
   font-size: 16px;
   font-weight: 400;
-  /* padding-right: 20px; */
+  padding-right: 40px;
   /* max-width: 750px; */
 }
 
