--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -1,4 +1,6 @@
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .search-bar {
   display: flex;
@@ -36,6 +38,7 @@
   padding: 20px 0;
   text-align: center;
 }
+
 .MyPeerAdvisorHeader {
   display: flex;
   justify-content: center;
@@ -43,13 +46,12 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-
 .profileCardLayout {
   display: flex;
   align-self: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   border-radius: 10px;
-  
+
   /* max-width: 1000px; */
   background-color: rgb(233, 232, 232);
   /* gap: 50px; */
@@ -70,7 +72,7 @@
 
 }
 
-.ratingText{
+.ratingText {
   font-size: 23px;
   font-weight: 200;
   margin-left: 26px;
@@ -87,6 +89,7 @@
 
 .ratingFooter {
   padding-top: 21px;
+
   :global {
     &.ant-btn {
       font-size: 16px !important;
@@ -100,9 +103,11 @@
 
 .profileBody {
   margin-top: 6px;
+
   & h1 {
     font-size: 45px;
   }
+
   font-size: 16px;
   font-weight: 500;
   padding-right: 20px;
@@ -122,7 +127,7 @@
   padding: 30px 100px 45px 20px;
 }
 
-.userRatingNumberText{
+.userRatingNumberText {
   font-size: 35px;
   font-weight: 800;
   background-color: rgb(76, 224, 76);
@@ -130,7 +135,7 @@
   margin-left: 5px;
 }
 
-.userRatingText{
+.userRatingText {
   font-size: 18px;
   font-weight: 200;
   margin-left: 26px;
@@ -150,9 +155,11 @@
 
 .userProfileBody {
   margin-top: 6px;
+
   & h1 {
     font-size: 30px;
   }
+
   font-size: 16px;
   font-weight: 400;
   padding-right: 40px;
