--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -200,3 +200,23 @@
   background-color: rgb(223, 222, 222);
   border-radius: 5px;
 }
+
+.result-columns {
+  display: flex;
+}
+
+
+.professor-list, .course-list {
+  flex: 1; /* Each takes up equal space */
+  padding: 10px; /* Optional padding */
+}
+
+
+.professor-list {
+  background-color: #f0f0f0; /* Example background color */
+}
+
+
+.course-list {
+  background-color: #e0e0e0; /* Example background color */
+}
