--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -111,11 +111,15 @@
   padding: 25px;
 }
 
-.ratingFooter {
+
+ratingFooter {
   padding-top: 21px;
 
   :global {
     &.ant-btn {
+      &span {
+        max-width: 30px!important;
+      }
       font-size: 16px !important;
       height: 32px;
       padding: 2px 11px !important;
@@ -206,4 +210,34 @@
 
 .red-text {
   color: red;
+  gap: 5px;
 }
+
+.MPAFormLayout {
+  padding: 50px;
+}
+
+.formLayout {
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border: solid 1px;
+  border-radius: 5px;
+  gap: 15px;
+  font-weight: 700;
+}
+
+.selectTags {
+  gap: 15px;
+}
+
+.profReviewText {
+  color: #222222;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: aliceblue;
+  max-width: 300px;
+  font-size: 30px;
+}
+
