Added like and dislike button

--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -249,3 +249,9 @@ ratingFooter {
   gap: 5px;
 
 }
+
+.LikeDislikeButtonsLayout {
+  padding-top: 5px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+}
