--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -255,3 +255,9 @@ ratingFooter {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
 }
+
+.dateFormat {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 10px;
+}
